--- a/products/templates/report.html
+++ b/products/templates/report.html
@@ -7,7 +7,7 @@
         var startDate = document.getElementById("start").value;
         var endDate = document.getElementById("end").value;
 
-        if ((Date.parse(endDate) <= Date.parse(startDate))) {
+        if ((Date.parse(endDate) < Date.parse(startDate))) {
           alert("End date should be greater than Start date");
           document.getElementById("end").value = "";
         }
@@ -55,6 +55,7 @@
 
     </tr>
     {% endfor %}
+
     <tr>
       <td>Total</td>
       <td></td>
